# gsplat

./: .gitignore  LICENSE  README.md  ablation.sh  checkpoint_visualization.ipynb  endmember.py  fit.sh  gaussianimage_cholesky_unknown.py  hsi_utils.py  init_EA.py  plus.rtf  quantize.py  requirements.txt  summary_ck.ipynb  train.py  train_compression.py  train_hsi.py  train_quantize.py  utils.py
gsplat/: .gitignore  setup.py
gsplat/gsplat/: __init__.py  project_gaussians.py  project_gaussians_2d.py  project_gaussians_2d_covariance.py  project_gaussians_2d_scale_rot.py  rasterize_sum.py  rasterize_sum_gabor.py  rasterize_sum_plus.py  utils.py
gsplat/gsplat/cuda/: __init__.py
gsplat/gsplat/cuda/csrc/: CMakeCache.txt  CMakeLists.txt  Makefile  backward.cu  backward.cuh  backward2d.cu  backward2d.cuh  bindings.cu  bindings.h  cmake_install.cmake  config.h  ext.cpp  forward.cu  forward.cuh  forward2d.cuh  foward2d.cu  helpers.cuh
gsplat/tests/: test_rasterize_gabor_sum.py  test_train_hsi_smoke.py
models/: gaussianimage_cholesky.py  gaussianimage_cholesky_hsi.py  gaussianimage_covariance.py  gaussianimage_covariance_hsi.py  gaussianimage_rs.py  gaussiansplatting_3d.py  metrics.py  utils.py
models/.ipynb_checkpoints/: gaussianimage_covariance_hsi-checkpoint.py
